--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/react": "17.0.21",
+    "autoprefixer": "^10.3.4",
     "chai": "^4.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.6.4",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15",
     "typescript": "4.4.3"
   }
 }
