--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
